Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0, 10.1
-
Component/s: Storage Engine - Connect
-
Labels:
-
Sprint:10.0.26
Description
==8389== Thread 4:
|
==8389== Conditional jump or move depends on uninitialised value(s)
|
==8389== at 0x4C2FFDC: strcmp (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
|
==8389== by 0xD4F94CB: json_set_item (jsonudf.cpp:3589)
|
==8389== by 0x8D076A: udf_handler::val_str(String*, String*) (item_func.cc:3715)
|
==8389== by 0x8D1326: Item_func_udf_str::val_str(String*) (item_func.cc:3903)
|
==8389== by 0x882A80: Item::send(Protocol*, String*) (item.cc:6508)
|
==8389== by 0x5A19E2: Protocol::send_result_set_row(List<Item>*) (protocol.cc:903)
|
==8389== by 0x617F09: select_send::send_data(List<Item>&) (sql_class.cc:2556)
|
==8389== by 0x6934C0: JOIN::exec_inner() (sql_select.cc:2459)
|
==8389== by 0x692ECB: JOIN::exec() (sql_select.cc:2373)
|
==8389== by 0x6965DB: mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3308)
|
==8389== by 0x68C2A8: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
|
==8389== by 0x65D341: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:5293)
|
==8389== by 0x6552D4: mysql_execute_command(THD*) (sql_parse.cc:2562)
|
==8389== by 0x660299: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:6554)
|
==8389== by 0x652294: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1308)
|
==8389== by 0x651422: do_command(THD*) (sql_parse.cc:998)
|
==8389== Conditional jump or move depends on uninitialised value(s)
|
==8389== at 0xD4F94CE: json_set_item (jsonudf.cpp:3589)
|
==8389== by 0x8D076A: udf_handler::val_str(String*, String*) (item_func.cc:3715)
|
==8389== by 0x8D1326: Item_func_udf_str::val_str(String*) (item_func.cc:3903)
|
==8389== by 0x882A80: Item::send(Protocol*, String*) (item.cc:6508)
|
==8389== by 0x5A19E2: Protocol::send_result_set_row(List<Item>*) (protocol.cc:903)
|
==8389== by 0x617F09: select_send::send_data(List<Item>&) (sql_class.cc:2556)
|
==8389== by 0x6934C0: JOIN::exec_inner() (sql_select.cc:2459)
|
==8389== by 0x692ECB: JOIN::exec() (sql_select.cc:2373)
|
==8389== by 0x6965DB: mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3308)
|
==8389== by 0x68C2A8: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
|
==8389== by 0x65D341: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:5293)
|
==8389== by 0x6552D4: mysql_execute_command(THD*) (sql_parse.cc:2562)
|
==8389== by 0x660299: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:6554)
|
==8389== by 0x652294: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1308)
|
==8389== by 0x651422: do_command(THD*) (sql_parse.cc:998)
|
==8389== by 0x783A89: do_handle_one_connection(THD*) (sql_connect.cc:1377)
|
==8389== Conditional jump or move depends on uninitialised value(s)
|
==8389== at 0x4C2FFDC: strcmp (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
|
==8389== by 0xD4F94EB: json_set_item (jsonudf.cpp:3591)
|
==8389== by 0x8D076A: udf_handler::val_str(String*, String*) (item_func.cc:3715)
|
==8389== by 0x8D1326: Item_func_udf_str::val_str(String*) (item_func.cc:3903)
|
==8389== by 0x882A80: Item::send(Protocol*, String*) (item.cc:6508)
|
==8389== by 0x5A19E2: Protocol::send_result_set_row(List<Item>*) (protocol.cc:903)
|
==8389== by 0x617F09: select_send::send_data(List<Item>&) (sql_class.cc:2556)
|
==8389== by 0x6934C0: JOIN::exec_inner() (sql_select.cc:2459)
|
==8389== by 0x692ECB: JOIN::exec() (sql_select.cc:2373)
|
==8389== by 0x6965DB: mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3308)
|
==8389== by 0x68C2A8: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
|
==8389== by 0x65D341: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:5293)
|
==8389== by 0x6552D4: mysql_execute_command(THD*) (sql_parse.cc:2562)
|
==8389== by 0x660299: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:6554)
|
==8389== by 0x652294: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1308)
|
==8389== by 0x651422: do_command(THD*) (sql_parse.cc:998)
|
==8389== Conditional jump or move depends on uninitialised value(s)
|
==8389== at 0xD4F94EE: json_set_item (jsonudf.cpp:3591)
|
==8389== by 0x8D076A: udf_handler::val_str(String*, String*) (item_func.cc:3715)
|
==8389== by 0x8D1326: Item_func_udf_str::val_str(String*) (item_func.cc:3903)
|
==8389== by 0x882A80: Item::send(Protocol*, String*) (item.cc:6508)
|
==8389== by 0x5A19E2: Protocol::send_result_set_row(List<Item>*) (protocol.cc:903)
|
==8389== by 0x617F09: select_send::send_data(List<Item>&) (sql_class.cc:2556)
|
==8389== by 0x6934C0: JOIN::exec_inner() (sql_select.cc:2459)
|
==8389== by 0x692ECB: JOIN::exec() (sql_select.cc:2373)
|
==8389== by 0x6965DB: mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3308)
|
==8389== by 0x68C2A8: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
|
==8389== by 0x65D341: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:5293)
|
==8389== by 0x6552D4: mysql_execute_command(THD*) (sql_parse.cc:2562)
|
==8389== by 0x660299: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:6554)
|
==8389== by 0x652294: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1308)
|
==8389== by 0x651422: do_command(THD*) (sql_parse.cc:998)
|
==8389== by 0x783A89: do_handle_one_connection(THD*) (sql_connect.cc:1377)
|
^ Found warnings in /home/svoj/devel/maria/debug/mysql-test/var/log/mysqld.1.err
|