MDEV-9993 - connect.json_udf_bin valgrind warnings

"result" may be uninitialized when json_set_item() is called directly.